# high-frequency-trading-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: memory.h  queue.h  timing.h  types.h
src/engine/: trading_engine.h
src/market_data/: gateway.h  order_book.h
src/matching/: matching_engine.h
src/risk/: risk_manager.h
src/strategy/: strategy_base.h  strategy_interface.h
